--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,9 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_FRANCHISE: ROLE_PARTNER
+        ROLE_PARTNER: ROLE_STRUCTURE
 
 when@test:
     security:
