--- a/.env
+++ b/.env
@@ -29,3 +29,7 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/My8Booty?serverVersion=mariadb-10.4.24
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://a45f835bcdf6aa:3664572be17550@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+###< symfony/mailer ###
