--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,10 +19,10 @@ security:
             form_login:
                 login_path: app_login
                 check_path: app_login
-                default_target_path: app_home
+                default_target_path: app_partner_home
             logout:
                 path: app_logout
-                target: app_home
+                target: app_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
