--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-# APP_ENV=dev
-APP_ENV=prod
+APP_ENV=dev
+# APP_ENV=prod
 APP_SECRET=c5a963f650b58c5c47309c8d0f7b6c82
 ###< symfony/framework-bundle ###
 
@@ -27,9 +27,9 @@ APP_SECRET=c5a963f650b58c5c47309c8d0f7b6c82
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 # DATABASE LOCALE
-#DATABASE_URL="mysql://root@127.0.0.1:3306/My8Booty?serverVersion=mariadb-10.4.24&charset=utf8mb4"
+ DATABASE_URL="mysql://root@127.0.0.1:3306/My8Booty?serverVersion=mariadb-10.4.24&charset=utf8mb4"
 # DATABASE HEROKU
-DATABASE_URL="mysql://syz10ifrgs0sfz8v:scezpy9h2hvm0saq@ltnya0pnki2ck9w8.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/zwzf1pl9wk2cv7cc"
+# DATABASE_URL="mysql://syz10ifrgs0sfz8v:scezpy9h2hvm0saq@ltnya0pnki2ck9w8.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/zwzf1pl9wk2cv7cc"
 
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
