fixed responsive bug in small screen : table scrollable + footer and nav width

--- a/.env
+++ b/.env
@@ -31,6 +31,9 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/My8Booty?serverVersion=mariadb-10.4.24
 # DATABASE HEROKU
 # DATABASE_URL="mysql://syz10ifrgs0sfz8v:scezpy9h2hvm0saq@ltnya0pnki2ck9w8.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/zwzf1pl9wk2cv7cc"
 
+# DATABASE IONOS
+# DATABASE_URL="mysql://dbu1106013:JSIONOSbddbootybooster.42.2@db5012138213.hosting-data.io:3306/dbs10213751?serverVersion=mariadb-10.6.1&charset=utf8mb4"
+
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
