--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /.env.local.php
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
+/config/secrets/dev/dev.decrypt.private.php
+
 /public/bundles/
 /var/
 /vendor/
